# 1S2026_LFPA_202300583

Practica1/: .gitignore  README.md
Practica1/data/: cursos.lfp  estudiantes.lfp  notas.lfp
Practica1/docs/: reporte1_estadisticas_por_curso.html  reporte2_rendimiento_por_estudiante.html  reporte3_top10_estudiantes.html  reporte4_cursos_reprobacion.html  reporte5_analisis_carrera.html
Practica1/src/: main.cpp
Proyecto 2/: .gitignore  CMakeLists.txt  arbol.dot  ast.h  error.h  errores.html  lexical_analyzer.cpp  lexical_analyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  prueba.task  prueba_error.task  report_generator.cpp  report_generator.h  responsables.html  syntax_analyzer.cpp  syntax_analyzer.h  tablero.html  token.h
Proyecto 2/tests/: 01_basico_valido.task  02_completo_valido.task  03_comentarios_espacios.task  04_error_lexico_caracter.task  05_error_lexico_cadena.task  06_error_sintactico_dos_puntos.task  07_error_sintactico_comas.task  08_error_sintactico_estructura.task  09_multiples_errores_mixtos.task  10_panic_mode_extremo.task
Proyecto1/: .gitignore  CMakeLists.txt  Manual_Tecnico.md  Manual_Usuario.md  ejemplo.medlang
Proyecto1/docs/: diagrama.dot  reporte_citas.html  reporte_estadisticas.html  reporte_medicos.html  reporte_pacientes.html
Proyecto1/include/: LexicalAnalyzer.h  LexicalAnalyzerTests.h  Token.h
Proyecto1/src/: LexicalAnalyzer.cpp  MainWindow.cpp  MainWindow.h  ReportGenerator.cpp  ReportGenerator.h  Token.cpp  main.cpp
Proyecto1/tests/: caso01_valido_basico.med  caso02_valido_espaciado.med  caso03_valido_mixto.med  caso04_token_invalido.med  caso05_cadena_sin_cerrar.med  caso06_fecha_incorrecta.med  caso07_hora_invalida.med  caso08_especialidad_no_reconocida.med  caso09_multiples_errores.med  caso10_borde_minificado.med  test_avanzado.med  test_medio.med
Tarea 1/: main.cpp
